[tool.poetry]
name = "ExaBOT"
version = "0.1.0"
description = ""
authors = ["CrysoK <contact@crysok.com>"]

[tool.poetry.dependencies]
python = "^3.10"
facebook-scraper = "^0.2.59"
emoji = "^2.6.0"
pymongo = "^4.4.0"
mongoengine = "^0.27.0"
python-dotenv = "^1.0.0"
flask = "^2.3.2"
py-cord = "^2.4.0"
revchatgpt = "^6.7.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportOptionalMemberAccess = false
